syntax = "proto3";
package TimeWarp.Blazor.Features.Hellos;

message HelloRequest {
   string Name = 1;
}
message HelloResponse {
   string Message = 1;
}
service HelloService {
   rpc SayHello (HelloRequest) returns (HelloResponse);
}
